# GamerTagIDGrabber

./: .gitignore  LICENSE.md  README.md  example.env  gamertag_id_grabber.service  logging.conf  main.py  pre_push.py  pyproject.toml  requirements.txt
plugins/: gamertag_commands.py  openxbl_types.py
