[project]
name = "gamertagidgrabber"
version = "0.1.0"
description = "Discord Bot to grab XBOX/Playstation Gamertag ID from Gamertags and vice versa."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "hikari-crescent>=1.2.0",
    "psnawp>=2.2.0",
    "python-dotenv>=1.1.0",
]

[dependency-groups]
dev = ["black>=25.1.0", "mypy>=1.15.0", "pyright>=1.1.400", "ruff>=0.11.9"]

[tool.mypy]
strict = true
check_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true
ignore_missing_imports = true
exclude = [".venv", "venv"]

[tool.pyright]
exclude = [".venv", "venv"]
pythonVersion = "3.11"
typeCheckingMode = "strict"
reportPrivateUsage = false
reportImportCycles = false
reportIncompatibleMethodOverride = false
reportWildcardImportFromLibrary = false

[tool.black]
line-length = 160

[tool.ruff]
line-length = 160

[tool.ruff.lint]
select = ["E", "F", "I001", "I002"]
